[gd_scene load_steps=7 format=2]

[ext_resource path="res://world/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://game/GameView.gd" type="Script" id=3]
[ext_resource path="res://game/Viewport.gd" type="Script" id=4]
[ext_resource path="res://assets/music/melodyvollen.mp3" type="AudioStream" id=5]
[ext_resource path="res://game/PauseMenu.gd" type="Script" id=6]

[node name="GameView" type="ViewportContainer"]
margin_right = 480.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 480, 358 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Viewport"]
position = Vector2( 225.01, 247.941 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="World" parent="Viewport" instance=ExtResource( 1 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 150.0
margin_top = 125.0
margin_right = 350.0
margin_bottom = 204.0
popup_exclusive = true
window_title = "Welcome!"
dialog_text = "Objective: Collect the 10 pieces of Gold buried throughout the island."
dialog_autowrap = true

[node name="PauseMenu" type="PopupDialog" parent="."]
pause_mode = 2
visible = true
margin_left = 140.0
margin_top = 30.0
margin_right = 340.0
margin_bottom = 330.0
rect_min_size = Vector2( 200, 300 )
popup_exclusive = true
script = ExtResource( 6 )

[node name="ObjectiveDescription" type="RichTextLabel" parent="PauseMenu"]
margin_left = 16.2509
margin_top = 25.9898
margin_right = 183.251
margin_bottom = 88.9898
text = "Objective: Collect the 10 pieces of Gold buried throughout the island."

[node name="MainMenuButton" type="Button" parent="PauseMenu"]
margin_left = 50.1932
margin_top = 173.804
margin_right = 158.193
margin_bottom = 187.804
text = "To Main Menu"

[node name="ResumeButton" type="Button" parent="PauseMenu"]
margin_left = 68.1729
margin_top = 232.987
margin_right = 128.173
margin_bottom = 246.987
text = "Resume"

[connection signal="popup_hide" from="AcceptDialog" to="." method="_on_AcceptDialog_popup_hide"]
[connection signal="pressed" from="PauseMenu/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
